@@ -1,4 +1,4 @@
-/* $Id: getopt.c,v 1.2 2005-07-07 16:34:06 dron Exp $ */
+/* $Id: getopt.c,v 1.3 2009-01-22 20:53:07 fwarmerdam Exp $ */
 
 /*
  * Copyright (c) 1987, 1993, 1994
@@ -36,6 +36,7 @@ __RCSID("$NetBSD: getopt.c,v 1.26 2003/08/07 16:43:40 agc Exp $");
 
 #include <stdio.h>
 #include <string.h>
+#include "libport.h"
 
 int	opterr = 1,		/* if error message should be printed */
 	optind = 1,		/* index into parent argv vector */
